samples/_failures_safe/1761799658_60d3a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7a31efd9.c: In function ‘main’:
./samples/SAFE/__tmp_7a31efd9.c:163:28: error: missing terminating " character
  163 |                     printf("\nMatrix Addition Result
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7a31efd9.c:163:21: error: expected expression at end of input
  163 |                     printf("\nMatrix Addition Result
      |                     ^~~~~~
./samples/SAFE/__tmp_7a31efd9.c:163:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7a31efd9.c:163:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7a31efd9.c:163:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7a31efd9.c:163:21: error: expected declaration or statement at end of input
